# V60-tier3-team-34

./: .gitignore  Procfile  README.md  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: scrape-twitter.yml
api/: index.py
docs/: db_implementation_plan.md  filter_testing.md  team_decision_log.md
server/: .env.example  .gitignore  conftest.py  dashboard.html  docker-compose.yml  filter.py  import_tweets.py  main.py  pyproject.toml  run_filter.py  seed.py  test_api.py  test_db_relationship.py  test_filter.py  twitter.py
server/alembic/: env.py
server/alembic/versions/: 55fae4214fb6_initial_migration.py
server/data/: mock_invalid_tweets.json  tweets_jimcramer_20260413_171423.csv  tweets_jimcramer_20260413_171423.json  tweets_jimcramer_20260413_202629.csv  tweets_jimcramer_20260413_202629.json
server/db/: database.py
server/models/: __init__.py  tweet.py  user_settings.py
server/services/: alpaca_service.py  claude_service.py  supabase_signal_service.py
server/static/: about.css  dashboard.css
server/static/js/dashboard/: api.js  formatters.js  main.js  state.js
server/static/js/dashboard/components/: envToggle.js  equityChart.js  positions.js  signalFeed.js  stats.js  tradeHistory.js  tradePanel.js
server/templates/: about.html  dashboard.html
server/templates/components/: signal_feed.html
