[project]
name = "reverse-cramer-server"
version = "0.1.0"
description = "Server for Reverse Cramer Project"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
