[project]
name = "reverse-cramer-server"
version = "0.1.0"
description = "Server for Reverse Cramer Project"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.135.3",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "supabase>=2.10.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[tool.setuptools]
py-modules = ["main", "twitter"]
